1.Upgrade Java version to 17 2.Upgrade Spring Boot to 3.2.4 3.Upgrade Spring Cloud to 2024.0.0 4.Using batchRegisterInstance instead of registerInstance for Nacos 5.fix some issue for Zookeeper Sync